--- a/Others/templates/others/home.html
+++ b/Others/templates/others/home.html
@@ -2,11 +2,22 @@
 {% load static %}
 {% block home %}
 <div class="container">
+
+<div class="row" style="margin-top:20px;">
+      <div class="col-6" style="margin-left:10px;width: 518px;">
+       <img src= {% static "others/images/aboutus.jpg" %} style="width:500px;height:470px;">
+      </div>
+      <div class="col-6" style="width:791px;height:400px;">
+        <h1>{{article_obj_about.article_heading_name}}</h1>
+        <p style="text-align:justify"> {{article_obj_about.article_discription}} </p>      
+      </div>
+      
+</div>
      <!-- ======= Testimonials Section ======= -->
-     <h2>Sanjay</h2>
-     <div class="row">
-        <div class="col">
-            <section id="testimonials" class="testimonials">
+     <br><br>
+<div class="row" style="margin-top:40px">
+      <div class="col">
+<section id="testimonials" class="testimonials">
       <div class="container" data-aos="zoom-in">
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -82,13 +93,20 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+</section><!-- End Testimonials Section -->
 
         </div>
      </div>
     
 
 </div>
+
+
+
+
+
+
+
 
 <div class="row">
     <div class="col-12">
@@ -145,5 +163,10 @@
 </div>
 
 </div>
+
+
+
+
+
 
 {% endblock %}
