--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -470,7 +470,7 @@ h6 {
 #hero {
   width: 100%;
   height: 45vh;
-  background: url("../img/hero-bg1.jpg") top left;
+  background: url("../img/hero-bg.png") top left;
   background-size: cover;
   position: relative;
 }
